new endpoint for deleting a product
